# PySynthRack

./: .gitignore  Claude.md  README.md  TODO-ARCHIVE.md  TODO.md  WORKLOG.md  build.ps1  build_cli.ps1  error_handler_GUIDE.md  error_handler_QUICKSTART.md  pitch_calculator.html  pyproject.toml  pysynthrack-cli.spec  pysynthrack.spec  requirements-dev.txt  requirements.txt  rosetta-pitch.html  start.cmd
docs/: MODULES.md  MODULE_IDEAS.md  architecture.md
examples/: ad_kick.json  aftertouch_filter.json  ambient_bloom.json  bitcrusher_lofi.json  chorus_lush.json  convolver_insert.json  convolver_reverb.json  crossover_sweep.json  cv_gates_amp.json  cv_keyboard_external_voice.json  cv_utility_demo.json  cvtofreq_bipolar_pendulum.json  cvtofreq_blip.json  delay_dub_echo.json  distortion_drive.json  dual_mod_filter.json  envelope_follower_wah.json  fan_out.json  fat_saw.json  file_crossover_split.json  filter_envelope.json  flanger_jet_sweep.json  flanger_through_zero.json  fm_op_bass.json  fm_op_bell.json  fm_op_epiano.json  freq_shifter_barberpole.json  hello_sine.json  key_trigger_latch_brake.json  keyboard_adsr.json  keyboard_filtered.json  keyboard_play.json  keyboard_tremolo.json  lfo_oscillator.json  limiter_brickwall.json  loudness_demo.json  meter_levels.json  meter_stereo_master.json  mic_beatbox_crossover.json  mic_karaoke_recorder.json  (+47 more)
examples/irs/: generate_irs.py
packaging/: entry.py
pytest-cache-files-ow898o_9/v/cache/: nodeids
src/pysynthrack/: __init__.py  __main__.py  _crash.py  _resources.py  cli.py  error_handler.py  settings.py
src/pysynthrack/audio/: __init__.py  backend.py  media.py  numpy_backend.py  pyo_backend.py
src/pysynthrack/core/: __init__.py  module.py  patch.py  port.py  voicing.py
src/pysynthrack/io_patch/: __init__.py  patch_io.py
src/pysynthrack/modules/: __init__.py  ad_envelope.py  adsr.py  audiotocv.py  bitcrusher.py  chorus.py  clock.py  combiner.py  compressor.py  constant.py  convolver.py  crossover.py  cv_gates.py  cv_keyboard.py  cvcombiner.py  cvoffset.py  cvscale.py  cvtoaudio.py  cvtofrequency.py  delay.py  diskwriter.py  distortion.py  fader_seq.py  fileplayer.py  filter.py  flanger.py  fm_op.py  freq_shifter.py  key_trigger.py  keyboard.py  lfo.py  limiter.py  loudness.py  meter.py  micinput.py  midiinput.py  mixer.py  motion_eq.py  noise.py  noise_gate.py  (+19 more)
src/pysynthrack/ui/: __init__.py  app.py  buffer.py  dsp_load.py  node_layout.py  param_scroll.py  window_geometry.py  zoom.py
tests/: test_ad_envelope.py  test_adsr.py  test_antialiasing.py  test_audiotocv.py  test_backend_block_size.py  test_backend_crash.py  test_bitcrusher.py  test_buffered_specific_speaker.py  test_chorus.py  test_clock.py  test_combiner.py  test_compressor.py  test_convolver.py  test_core.py  test_crash.py  test_crash_logging.py  test_crossover.py  test_cv_depth.py  test_cv_gates.py  test_cv_keyboard.py  test_cv_meters.py  test_cv_modulation.py  test_cv_utilities.py  test_cvtoaudio.py  test_cvtofrequency.py  test_delay.py  test_disk_writer.py  test_distortion.py  test_dsp_load.py  test_error_handler.py  test_examples.py  test_fader_seq.py  test_file_player.py  test_file_player_queue.py  test_file_player_seek_ui.py  test_filter.py  test_flanger.py  test_fm_op.py  test_freq_shifter.py  test_io.py  (+52 more)
tools/: profile_numpy.py  rosetta-pitch.html
