[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysynthrack"
version = "0.1.0"
description = "Modular Python software synthesizer with a drag-cable node-graph UI"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Matthew" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy>=1.24",
    "sounddevice>=0.4.6",
]

[project.optional-dependencies]
# DearPyGui is optional so the CLI can be installed on Python versions
# that don't yet have a DPG wheel. Install with: pip install -e ".[gui]"
gui = ["dearpygui>=1.10"]
pyo = ["pyo>=1.0.5"]
all = ["dearpygui>=1.10", "pyo>=1.0.5"]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.4"]

[project.scripts]
pysynthrack = "pysynthrack.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
