[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysynthrack"
version = "0.1.0"
description = "Modular Python software synthesizer with a drag-cable node-graph UI"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Matthew" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "sounddevice>=0.4.6",
]

[project.optional-dependencies]
# DearPyGui is optional so the CLI can be installed on Python versions
# that don't yet have a DPG wheel. Install with: pip install -e ".[gui]"
gui = ["dearpygui>=1.10"]
pyo = ["pyo>=1.0.5"]
# MIDI input is opt-in because python-rtmidi is a C extension that needs
# build tools (or a prebuilt wheel) and may fail to install on locked-down
# systems. The MIDIInput module logs a friendly error if mido is missing
# rather than refusing to import. Install with: pip install -e ".[midi]"
midi = ["mido>=1.3", "python-rtmidi>=1.5"]
# [all] intentionally excludes pyo because pyo has no wheels for newer
# Pythons and its source build needs an external C toolchain. Install
# it explicitly with `pip install -e ".[pyo]"` on supported interpreters.
all = ["dearpygui>=1.10", "mido>=1.3", "python-rtmidi>=1.5"]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.4", "mido>=1.3"]

[project.scripts]
pysynthrack = "pysynthrack.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
